# PaCoRe

./: .gitignore  README.md  pyproject.toml
pacore/batch_inference/: base_exp.py
playground/: example_batch_inference_pacore_low_1210.py  sample_questions.jsonl
